Updated CSS to be responsive so site is now mobile-friendly. Need to fix slight top-bottom spacing issues on navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 .App {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
-  min-width: 1500px;
+  font-size: 1.2vw;
+}
+
+@media screen and (max-width: 600px) {
+  .App {
+    font-size: 3vw;
+  }
 }
 
 h1 {
@@ -13,7 +18,6 @@ h1 {
   background-size: cover;
   background-position-y: 70%;
   width: 100%;
-  min-height: 500px;
 }
 
 header {
@@ -21,34 +25,43 @@ header {
 }
 
 header img {
-  height: 300px;
+  max-width: 20%;
   border-radius: 50%;
 
-  padding: 25px 0px 25px 0px;
+  padding: 1vh 0vw;
 }
 
 header h1 {
-  padding: 0px 0px 49px 0px;
-  font-size: 72px;
+  padding: 0vh 0vw 1vh 0vw;
+  font-size: 4vw;
 
   color: white;
-  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-width: 0.1vw;
   -webkit-text-stroke-color: rgb(13, 48, 80);
 }
 
 nav {
   width: 100%;
+  height: 3rem;
   overflow: hidden;
   text-align: center;
-  font-size: 14px;
+  font-size: 1rem;
 
   background:
   radial-gradient(rgb(206, 206, 206) 2%, transparent 10%) 0 0,
   radial-gradient(rgb(44, 165, 94) 2%, transparent 10%) 8px 8px,
   radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
   radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-  background-size:10px 10px;
+  background-size:6px 6px;
   background-color:rgb(22, 92, 158);
+}
+
+@media screen and (max-width: 600px) {
+  nav {
+    min-height: 6vh;
+    height: 3rem;
+    font-size: 1rem;
+  }
 }
 
 .sticky {
@@ -62,8 +75,7 @@ nav {
 
 #nav-logo {
   float: left;
-  max-height: 51px;
-  max-width: 51px;
+  height: 3rem;
 }
 
 nav ul {
@@ -74,14 +86,14 @@ nav ul {
 
 nav li {
   display: inline-block;
-  padding: 16px 0;
+  padding: 1rem 0vw;
 }
 
 nav a {
   text-decoration: none;
   color: white;
   font-weight: bold;
-  padding: 16px 32px;
+  padding: 1rem 2vw;
 }
 
 nav a:hover {
@@ -90,7 +102,7 @@ nav a:hover {
 }
 
 #page-background {
-  padding: 0px 200px;
+  padding: 0px 10vw;
 
   background:
   radial-gradient(rgb(206, 206, 206) 2%, transparent 10%) 0 0,
@@ -112,7 +124,7 @@ nav a:hover {
 }
 
 #page-body {
-  padding: 8px 32px;
+  padding: 1vw 3vw;
   color: black;
 }
 
@@ -121,39 +133,47 @@ nav a:hover {
 }
 
 #page-body p {
-  text-indent: 3em;
+  text-indent: 2em;
+}
+
+@media screen and (max-width: 600px) {
+  #page-body img{
+    max-width: 50%;
+  }
+}
+
+#education-container ul {
+  margin: 0vw 0vw;
+  padding: 0vw 0vw 0vw 3vw;
 }
 
 #education-container p {
   text-indent: 0em;
-  overflow: hidden;
 }
 
 #lafayette-img {
   content: url("./images/lafayette.jpg");
   float: right;
-  height: 300px;
-  margin: 0px 0px 10px 10px;
+  max-width: 40%;
+  margin: 0vw 0vw 1vw 1vw;
 }
 
-#skills-container {
-  min-height: 350px;
-  min-width: 360px;
 
+.skills-list {
   background: rgb(255, 255, 255, 50%);
   border: 1px solid black;
-  border-radius: 25px;
+  border-radius: 2vw;
 
-  margin: 10px 0px;
+  margin: 1vw 0vw;
 }
 
 #skills-container h2 {
-  margin: 25px 0px 10px 0px;
+  margin: 0.5vw 0vw;
 }
 
 #skills-container div {
   float: left;
-  margin: 5px 25px;
+  margin: 1vw 1vw;
   width: 45%;
 
   text-align: center;
@@ -166,19 +186,28 @@ nav a:hover {
 }
 
 #skills-container li {
-  padding: 5px 0px;
+  padding: 0.4vw 0vw;
+}
+
+#additional-skills-info h2 {
+  margin-bottom: 0vw;
+}
+
+#additional-skills-info ul {
+  margin: 0vw 0vw;
+  padding: 0vw 0vw 0vw 3vw;
 }
 
 #noteworthy-courses li {
-  padding: 10px 0px;
+  padding: 0.8vw 0vw;
 }
 
 #projects-container {
-  margin: 0px 25px;
+  margin: 0vw 2vw;
 }
 
 #projects-container h3, h4 {
-  margin: 5px 0px;
+  margin: 0.4vw 0vw;
 }
 
 #projects-container p {
@@ -187,16 +216,16 @@ nav a:hover {
 
 .project-container {
   background: rgb(255, 255, 255, 50%);
-  margin: 15px 0px;
-  padding: 5px 0px;
+  margin: 1.5vw 0vw;
+  padding: 1vw 0vw;
 }
 
 .project {
-  margin: 0px 15px;
+  margin: 0vw 1vw;
 }
 
 .project ul {
-  margin: 0px;
+  margin: 0vw;
 }
 
 .project a {
@@ -204,8 +233,8 @@ nav a:hover {
 }
 
 .interest-container img {
-  max-height: 300px;
-  margin: 0px 10px;
+  max-width: 40%;
+  margin: 0vw 0vw 1vw 1vw;
 }
 
 #league-finals-img {
@@ -216,7 +245,7 @@ nav a:hover {
 #meiji-jingu-img {
   content: url("./images/meiji-jingu.jpg");
   float: left;
-  margin: 0px 10px 25px 0px;
+  margin: 0px 1vw 1vw 0px;
 }
 
 #contact-container {
@@ -225,9 +254,9 @@ nav a:hover {
 
 #contact-img {
   content: url("./images/classroom-photo.jpg");
-  height: 300px;
   float: right;
-  margin: 0px 10px 25px 0px;
+  max-width: 40%;
+  margin: 0vw 0vw 1vw 1vw;
 }
 
 #contact-container a {
@@ -237,4 +266,11 @@ nav a:hover {
 
 #contact-container a:hover {
   color: rgb(22, 92, 158);
+}
+
+@media screen and (max-width: 600px) {
+  #contact-img {
+    float: none;
+    margin: 0vw 18vw;
+  }
 }
